# selenium-fraccion

./: README.md  pyproject.toml
scraping_farmacias/farmacias/: MAESTRO.xlsx  diccionario.xlsx
scraping_farmacias/farmacias/fraccion/: bot_fraccion.py  farmaco.py  normalizacion_diccionario.py  normalizacion_maestro.py  pruebas.py
